--- a/.github/workflows/extract-values.yml
+++ b/.github/workflows/extract-values.yml
@@ -21,12 +21,15 @@ jobs:
         id: extract_values
         run: |
           total=0
-          for value in $(grep -oP '(?<=Valor[0-9]: )\d+,\d{2}' index.html); 
-          do
-            value_number=$(echo $value | sed 's/,/./')
+          # Extract values, convert commas to dots for floating point numbers
+          grep -oP '(?<=Valor[0-9]: )\d+,\d{2}' index.html | while read -r value; do
+            # Replace comma with dot for decimal conversion
+            value_number=$(echo "$value" | sed 's/,/./')
+            # Sum the values using bc (basic calculator)
             total=$(echo "$total + $value_number" | bc)
           done
           echo "Total Values Sum: $total"
+          # Export the total value to the environment variable
           echo "Total_valores=$total" >> $GITHUB_ENV
 
       - name: Display Total Value
