--- a/.github/workflows/extract-values.yml
+++ b/.github/workflows/extract-values.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           total=0
           # Extract values, convert commas to dots for floating point numbers
-          grep -oP '(?<=Valor[0-9]: )\d+,\d{2}' index.html | while read -r value; do
+          grep -oP '(?<=Valor[0-9]: )\d+,\d{2}' index.html | while IFS= read -r value; do
             # Replace comma with dot for decimal conversion
             value_number=$(echo "$value" | sed 's/,/./')
             # Sum the values using bc (basic calculator)
